# FIAP

./: .gitignore  README.md
agentes-langgraph/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
agentes-langgraph/docs/graphs/: financial.mmd  research.mmd
agentes-langgraph/scripts/: export_graph.py
agentes-langgraph/src/agents/: __main__.py  cli.py  config.py
agentes-langgraph/src/agents/api/: main.py  schemas.py  streaming.py
agentes-langgraph/src/agents/api/routers/: financial.py  research.py  trade.py
agentes-langgraph/src/agents/financial/: agent.py  tools.py
agentes-langgraph/src/agents/research/: agent.py  state.py  tools.py
agentes-langgraph/src/agents/trade/: agent.py  db.py  state.py  tools.py
agentes-langgraph/textbook/: index.html
agentes-langgraph/textbook/assets/: main.js  style.css
agentes-langgraph/textbook/capitulos/: 01-o-que-sao-agentes.html  02-raciocinio-e-tool-calling.html  03-context-engineering.html  04-langgraph-na-pratica.html
deploy-agentes-llm/: .gitignore  Makefile  README.md
deploy-agentes-llm/notebooks/: 01-gemini-api-basics.ipynb  02-sse-under-the-hood.ipynb  03-asyncio-semaphore.ipynb  04-broker-worker-queues.ipynb  05-react-from-scratch.ipynb  README.md  pyproject.toml
deploy-agentes-llm/stages/01-sync/: .env.example  Dockerfile  README.md  main.py  models.py  pyproject.toml
deploy-agentes-llm/stages/02-stream/: .env.example  README.md  agent.py  docker-compose.yml  main.py  models.py  pyproject.toml
deploy-agentes-llm/stages/03-async/: .env.example  README.md  agent.py  database.py  db_models.py  docker-compose.yml  main.py  pyproject.toml  tasks.py
deploy-agentes-llm/stages/04-production/: .env.example  README.md  agent.py  concurrency.py  docker-compose.yml  errors.py  health.py  logging_config.py  main.py  models.py  pyproject.toml  seed.sql  tasks.py  timeouts.py
deploy-agentes-llm/textbook/: index.html
deploy-agentes-llm/textbook/assets/css/: style.css
deploy-agentes-llm/textbook/assets/js/: chapter-01.js  chapter-02.js  chapter-03.js  interactive.js  nav.js
deploy-agentes-llm/textbook/chapters/: 01-the-problem.html  02-communication.html  03-production.html  04-deploy.html
documentacao-ml/: Makefile  README.md
documentacao-ml/textbook/: index.html
documentacao-ml/textbook/assets/: main.js  style.css
documentacao-ml/textbook/capitulos/: 01-importancia-documentacao.html  02-model-cards.html  03-readme-mermaid.html  04-docstrings-type-hints.html  05-mlflow-star.html  06-checklist-tech-challenge.html
teste-hipotese/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
teste-hipotese/docs/textbook/: index.html
teste-hipotese/docs/textbook/css/: components.css  main.css
teste-hipotese/docs/textbook/js/: charts.js  nav.js  theme.js
teste-hipotese/docs/textbook/pages/: 01-intro.html  02-concepts.html  03-workflow.html  04-tests.html  05-interpretation.html  06-pitfalls.html
teste-hipotese/notebooks/: 01_eda.ipynb  02_hypothesis_tests.ipynb
teste-hipotese/src/: compare_models.py  config.py  data.py  train_mlp.py  train_sklearn.py  utils.py
