[project]
name = "teste-hipotese"
version = "0.1.0"
description = "Aula sobre Teste de Hipótese aplicado à avaliação de modelos de ML"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "mlflow>=2.10",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "scikit-posthocs>=0.9",
    "statsmodels>=0.14",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "rich>=13.0",
    "kagglehub>=0.3",
    "polars>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pre-commit>=3.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
