[project]
name = "agent-service-notebooks"
version = "0.1.0"
description = "Notebooks complementares — deep dives opcionais"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.0.0",
    "google-genai>=1.0.0",
    "langchain-google-genai>=4.2.0",
    "langgraph>=1.1.0",
    "rich>=14.0.0",
    "httpx>=0.28.0",
    "celery>=5.6.0",
    "aiohttp>=3.0.0",
]
