[project]
name = "agent-service-stage-01"
version = "0.1.0"
description = "Estágio 01 — Agente LLM com endpoint síncrono"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn>=0.42.0",
    "langgraph>=1.1.0",
    "langchain-google-genai>=4.2.0",
    "pydantic>=2.12.0",
    "rich>=14.0.0",
]
