[project]
name = "agent-service-stage-02"
version = "0.2.0"
description = "Estágio 02 — Agente LLM com streaming SSE"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn>=0.42.0",
    "langgraph>=1.1.0",
    "langchain-google-genai>=4.2.0",
    "pydantic>=2.12.0",
    "rich>=14.0.0",
]
